# DonaldCoin

./: README.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/assets/: constants.ts  idl.ts  launch.ts  signAndSendTransaction.ts  swap.ts  ui.tsx
smart contract/: Anchor.toml  package.json
smart contract/programs/contract/: Cargo.toml
smart contract/programs/contract/src/: constants.rs  lib.rs
smart contract/programs/contract/src/instructions/: launch.rs  mod.rs  swap.rs
