[package]
name = "contract"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "contract"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = { version = "=0.29.0", features = ["init-if-needed"] }
anchor-spl = "=0.29.0"
spl-token = { version = "=4.0.0", features = ["no-entrypoint"] } 
spl-associated-token-account = { version = "=2.2.0", features = [ "no-entrypoint", ] }
raydium-cp-swap = { git = "https://github.com/raydium-io/raydium-cp-swap", features = [
    "no-entrypoint",
    "cpi",
] }
solana-program = "1.16.25"
